src/components/30-organisms/footer/index.scss
.o-footer {
  text-align: initial;

  color: $color-prim-white;
  background-color: $color-prim-blue-dark-indigo;

  border-top: 1px solid rgba(255, 255, 255, 0.25);

  @include breakpoint($mediaquery-sm-up) {
    padding: 40px 0;
  }

  @include breakpoint($mediaquery-lg-up) {
    padding: 50px 0;

    h2 {
      color: $color-prim-white !important;
    }
  }

  &__content {
    @include breakpoint($mediaquery-sm-up) {
      display: grid;
      grid-template-areas:
        'links'
        'social';

      // IE11 workaround
      display: -ms-grid;
      -ms-grid-columns: 1fr;
    }

    @include breakpoint($mediaquery-lg-up) {
      grid-template-areas: 'links social';

      // IE11 workaround
      display: -ms-grid;
      -ms-grid-columns: 1fr 1fr;
    }
  }

  &__collection {
    @include breakpoint($mediaquery-sm-up) {
      display: flex;
      grid-area: links;

      // IE11 workaround
      -ms-grid-row: 1;
      -ms-grid-column: 1;
    }

    @include breakpoint($mediaquery-lg-up) {
      // IE11 workaround
      -ms-grid-row: 1;
      -ms-grid-column: 1;
    }
  }

  &__title {
    @include typo(primary, default, medium);
    margin: 0;
  }

  &__social-media {
    @include breakpoint($mediaquery-sm-up) {
      grid-area: social;

      // IE11 workaround
      -ms-grid-row: 2;
      -ms-grid-column: 1;
    }

    @include breakpoint($mediaquery-lg-up) {
      // IE11 workaround
      -ms-grid-row: 1;
      -ms-grid-column: 2;
    }

    &-title {
      @include typo(primary, medium, bold);

      text-transform: uppercase;
      line-height: 1.5;
    }

    &-list {
      margin: 0;
      text-indent: 0;
      list-style-type: none;
      padding: 0;

      display: flex;
      flex-wrap: wrap;
      padding: 15px 20px;

      li {
        margin-right: 10px;

        &:last-child {
          margin-right: 0;
        }
      }

      @include breakpoint($mediaquery-sm-up) {
        margin: 0;
        text-indent: 0;
        list-style-type: none;
        padding: 0;

        display: flex;
        flex-wrap: wrap;
        padding-top: 15px;

        margin-left: -10px;
        
        a {
          display: block;
          padding: 10px 10px 0 10px;
          margin-right: 10px;
        }
  
        a:first-of-type {
          padding: 10px 10px 0 0;
        }
      }

      @include breakpoint($mediaquery-lg-up) {
        padding: 10px 0;
      }
    }
  }

  &__accordion-button {
    @include typo(primary, default, medium);
    display: flex;
    justify-content: space-between;
    color: $color-prim-white;
    background-color: $color-prim-blue-dark-indigo;
    padding: 20px 30px 20px 30px;
    width: 100%;
    text-align: left;

    border: none;
    outline: 0;

    border-bottom: 1px solid $color-prim-blue-st-tropaz;
    text-transform: uppercase;

    svg {
      width: 10px;
      height: 10px;
      color: $color-prim-gray-dusty;
    }

    &-caret {
      transition: transform 0.2s ease-in-out;
      transform: rotate(180deg);

      &--open {
        transform: rotate(0deg);
      }

      @include breakpoint($mediaquery-sm-up) {
        display: none;
      }
    }

    @include breakpoint($mediaquery-sm-up) {
      padding: 0;
      background-color: transparent;
      border: 0 solid transparent;

      // remove button behaviour on desktop
      pointer-events: none;
    }
  }

  &__main {
    @include breakpoint($mediaquery-sm-up) {
      margin: 0 10px;
    }

    &:first-child {
      margin-left: 0;
    }

    &-content-panel {
      margin: 0;
      text-indent: 0;
      list-style-type: none;
      padding: 0;

      max-height: 0;
      transition: max-height 0.2s ease-out;

      overflow: hidden;
      background-color: $color-prim-blue-azure;

      &-list-item {
        @include typo(primary, xx-small, default);

        padding: 0;
        border-bottom: 1px solid $color-prim-blue-dark-indigo;

        color: $color-prim-white;

        &:last-child {
          border-bottom: none;
        }

        @include breakpoint($mediaquery-sm-up) {
          @include typo(primary, default, default);

          width: 165px;
          margin-top: 8px;
          padding: 5px 0;

          line-height: 1.21;
        }
      }

      @include breakpoint($mediaquery-sm-up) {
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
        padding-top: 10px;
        width: 330px;

        // IE11 workaround (use 'unset'-property for those two elements)
        background-color: $color-prim-blue-dark-indigo;
        max-height: 1000px !important;

        &--short {
          width: 165px;
        }
      }
    }
  }
}

